[tool.poetry]
name = "ponim"
version = "0.1.0"
description = ""
authors = ["Seth Stadick <sstadick@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^45.2.0"
milksnake = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
